fix: adjust layout by removing gap in root and adding margin to header

--- a/src/pages/MarketplacePage/MarketplacePage.module.scss
+++ b/src/pages/MarketplacePage/MarketplacePage.module.scss
@@ -5,12 +5,13 @@
   padding: 16px;
   display: flex;
   flex-direction: column;
-  gap: 16px;
+
   color: $typography-primary;
 
   .header {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 16px;
   }
   .title {
     @include typography.title-l-sf;
